--- a/AdvanceRestHandler/AdvanceRestHandler.csproj
+++ b/AdvanceRestHandler/AdvanceRestHandler.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>Arh</RootNamespace>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
