--- a/nuget.config
+++ b/nuget.config
@@ -1,13 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
         <clear />
         <add key="github" value="https://nuget.pkg.github.com/deadmann/index.json" />
     </packageSources>
-    <packageSourceCredentials>
-        <github>
-            <add key="Username" value="deadManN" />
-            <add key="ClearTextPassword" value="6c14d818b1a5c73441c751691b70ebb65344148b" />
-        </github>
-    </packageSourceCredentials>
 </configuration>
