--- a/nuget.config
+++ b/nuget.config
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <packageSources>
-        <clear />
-        <add key="github" value="https://nuget.pkg.github.com/deadmann/index.json" />
-    </packageSources>
+  <packageRestore>
+    <add key="enabled" value="True" />
+    <add key="automatic" value="True" />
+  </packageRestore>
+  <bindingRedirects>
+    <add key="skip" value="False" />
+  </bindingRedirects>
+  <packageSources>
+	<clear />
+	<add key="github" value="https://nuget.pkg.github.com/deadmann/index.json" />
+	<!-- <activePackageSource> -->
+		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+	<!-- </activePackageSource> -->
+  </packageSources>
 </configuration>
