Rename/Add Test Projects for .Net Core / .Net Framework / .Net

--- a/Tests/AdvancedRestHandler.Test_NetCore/AdvancedRestHandler.Test_NetCore.csproj
+++ b/Tests/AdvancedRestHandler.Test_NetCore/AdvancedRestHandler.Test_NetCore.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>AdvancedRestHandler.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
