--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,29 +10,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-
-      - name: unit tests for .Net Core
-        uses: deadmann/AdvancedRestHandler@master
+      - uses: actions/checkout@v2
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v1
         with:
-          project_path: Tests/AdvancedRestHandler.Test_NetCore
-          report_name: advanced_rest_handler_dotnet_core_test
-          report_title: Advanced Rest Handler - Test .Net Core
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          gist_name: advanced_rest_handler_dotnet_core_test.md
-          gist_badge_label: 'Advanced Rest Handler .Net Core: %Counters_passed%/%Counters_total%'
-          gist_token: ${{ secrets.GIST_TOKEN }}
-
-  test-dotnet-framework:
-    runs-on: windows-latest
-    steps:
-
-      - name: unit tests for .Net Framework
-        uses: deadmann/AdvancedRestHandler@master
-        with:
-          project_path: Tests/AdvancedRestHandler.Test_NetFramework
-          report_name: advanced_rest_handler_dotnet_framework_test
-          report_title: Advanced Rest Handler - Test .Net Framework
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          gist_name: advanced_rest_handler_dotnet_framework_test.md
-          gist_badge_label: 'Advanced Rest Handler .Net Framework: %Counters_passed%/%Counters_total%'
-          gist_token: ${{ secrets.GIST_TOKEN }}
+          dotnet-version: '3.1.x'
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build
+      - name: Test with the dotnet CLI
+        run: dotnet test
