--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.1.x'
+      - name: Setup Github Nuget Package Manager
+        run: |
+          dotnet nuget add source "https://nuget.pkg.github.com/deadmann/index.json" --name "githubfeed" --username "deadmann" --password "${{ secrets.GITHUB_TOKEN }}"
       - name: Install dependencies
         run: dotnet restore
       - name: Build
