--- a/AdvancedRestHandler/AdvancedRestHandler.csproj
+++ b/AdvancedRestHandler/AdvancedRestHandler.csproj
@@ -7,11 +7,15 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <RootNamespace>Arh</RootNamespace>
-    <AssemblyVersion>1.4.0.0</AssemblyVersion>
-    <FileVersion>1.4.0.0</FileVersion>
-    <Version>1.4.0</Version>
+    <AssemblyVersion>1.5.0.0</AssemblyVersion>
+    <FileVersion>1.5.0.0</FileVersion>
+    <Version>1.5.0</Version>
     <RepositoryUrl>https://github.com/deadmann/AdvancedRestHandler</RepositoryUrl>
     <PackageReleaseNotes>
+      1.5.0
+      - Supports external HttpClient
+      - Supports IHttpClientFactory
+      * Note: In case of using the `HttpClient` or returning a same instance of `HttpClient` in the `IHttpClientFactory`, some configuration will get overriden by ARH (such as Timeout).
       1.4.0
       - Fix bug with inherited ArhResponse and empty response
       1.3.0
@@ -25,13 +29,13 @@
       1.0.0: Initial Package
     </PackageReleaseNotes>
     <Authors>Hassan Faghihi</Authors>
-    <Copyright>© 2020 Hassan Faghihi</Copyright>
+    <Copyright>© 2020 - 2024 Hassan Faghihi</Copyright>
     <Description>ARH (Advanced Rest Handler) is an API client build on top of Newtownsoft package and System.Net.Http.HttpClient class, to provide an easy and unite way to request many form of APIs with different implementations</Description>
     <PackageTags>ARH, AdvancedRestHandler, restclient, rest, api, apiclient</PackageTags>
     <Product>AdvancedRestHandler</Product>
     <PackageId>AdvancedRestHandler</PackageId>
     <AssemblyName>AdvancedRestHandler</AssemblyName>
-    <PackageVersion>1.4.0</PackageVersion>
+    <PackageVersion>1.5.0</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -43,6 +47,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
