--- a/nuget.config
+++ b/nuget.config
@@ -15,4 +15,10 @@
     <add key="github" value="https://nuget.pkg.github.com/deadmann/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
+  <packageSourceCredentials>
+    <github>
+      <add key="Username" value="USERNAME" />
+      <add key="ClearTextPassword" value="TOKEN" />
+    </github>
+  </packageSourceCredentials>
 </configuration>
