Code Quality: Add support `C# 11` over `.netstandard`

--- a/Tests/AdvancedRestHandler.Test_NetCore/AdvancedRestHandler.Test_NetCore.csproj
+++ b/Tests/AdvancedRestHandler.Test_NetCore/AdvancedRestHandler.Test_NetCore.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>AdvancedRestHandler.Tests</RootNamespace>
+
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
