--- a/AdvancedRestHandler/AdvancedRestHandler.csproj
+++ b/AdvancedRestHandler/AdvancedRestHandler.csproj
@@ -7,9 +7,9 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <RootNamespace>Arh</RootNamespace>
-    <AssemblyVersion>1.5.0.0</AssemblyVersion>
-    <FileVersion>1.5.0.0</FileVersion>
-    <Version>1.5.0</Version>
+    <AssemblyVersion>1.5.1.0</AssemblyVersion>
+    <FileVersion>1.5.1.0</FileVersion>
+    <Version>1.5.1</Version>
     <RepositoryUrl>https://github.com/deadmann/AdvancedRestHandler</RepositoryUrl>
     <PackageReleaseNotes>
       1.5.0
@@ -35,7 +35,8 @@
     <Product>AdvancedRestHandler</Product>
     <PackageId>AdvancedRestHandler</PackageId>
     <AssemblyName>AdvancedRestHandler</AssemblyName>
-    <PackageVersion>1.5.0</PackageVersion>
+    <PackageVersion>1.5.1</PackageVersion>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
