--- a/AdvancedRestHandler/AdvancedRestHandler.csproj
+++ b/AdvancedRestHandler/AdvancedRestHandler.csproj
@@ -7,11 +7,13 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <RootNamespace>Arh</RootNamespace>
-    <AssemblyVersion>1.5.1.0</AssemblyVersion>
-    <FileVersion>1.5.1.0</FileVersion>
-    <Version>1.5.1</Version>
+    <AssemblyVersion>1.6.0.0</AssemblyVersion>
+    <FileVersion>1.6.0.0</FileVersion>
+    <Version>1.6.0</Version>
     <RepositoryUrl>https://github.com/deadmann/AdvancedRestHandler</RepositoryUrl>
     <PackageReleaseNotes>
+      1.6.0
+      - Add support for using custom SSL/TSL protocols
       1.5.0
       - Supports external HttpClient
       - Supports IHttpClientFactory
@@ -35,7 +37,7 @@
     <Product>AdvancedRestHandler</Product>
     <PackageId>AdvancedRestHandler</PackageId>
     <AssemblyName>AdvancedRestHandler</AssemblyName>
-    <PackageVersion>1.5.1</PackageVersion>
+    <PackageVersion>1.6.0</PackageVersion>
     <LangVersion>11</LangVersion>
   </PropertyGroup>
 
