Update `docs` `txt`->`md` and `nuget.config` configurations

--- a/nuget.config
+++ b/nuget.config
@@ -17,8 +17,8 @@
   </packageSources>
   <packageSourceCredentials>
     <github>
-      <add key="Username" value="USERNAME" />
-      <add key="ClearTextPassword" value="TOKEN" />
+      <add key="Username" value="${{ secrets.GITHUB_USERNAME }}" />
+      <add key="ClearTextPassword" value="${{ secrets.GITHUB_TOKEN }}" />
     </github>
   </packageSourceCredentials>
 </configuration>
