--- a/Tests/AdvancedRestHandler.Test_Net/AdvancedRestHandler.Test_Net.csproj
+++ b/Tests/AdvancedRestHandler.Test_Net/AdvancedRestHandler.Test_Net.csproj
@@ -7,6 +7,8 @@
         <IsPackable>false</IsPackable>
 
         <LangVersion>11</LangVersion>
+
+        <RootNamespace>Arh.Test.Net</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,6 +17,10 @@
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\AdvancedRestHandler\AdvancedRestHandler.csproj" />
     </ItemGroup>
 
 </Project>
