--- a/Tests/AdvancedRestHandler.Test_NetCore/AdvancedRestHandler.Test_NetCore.csproj
+++ b/Tests/AdvancedRestHandler.Test_NetCore/AdvancedRestHandler.Test_NetCore.csproj
@@ -5,7 +5,7 @@
 
     <IsPackable>false</IsPackable>
 
-    <RootNamespace>AdvancedRestHandler.Tests</RootNamespace>
+    <RootNamespace>Arh.Test.Core</RootNamespace>
 
     <LangVersion>11</LangVersion>
   </PropertyGroup>
